# gcloud-uri-signer

./: Cargo.toml  LICENSE-MIT  README.mkd
src/: main.rs
